issue #92: added default setting: overflow-x hidden to custom.css

--- a/system/templates/YaWK-bootstrap4/css/custom.css
+++ b/system/templates/YaWK-bootstrap4/css/custom.css
@@ -1,6 +1,6 @@
-
 body {
     overflow-y: scroll;
+  	overflow-x: hidden;   
 }
 
 .bg-black
